# mcp-server-grok-video

./: Cargo.toml
src/: main.rs
